--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,14 @@ homepage: https://github.com/DrunkOnBytes/flutter_collapsible_sidebar
 repository: https://github.com/DrunkOnBytes/flutter_collapsible_sidebar
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
